@@ -528,6 +528,7 @@
     * 3851 Host edit dialog: Checkbox hosttags are now checked by default...
     * 3800 WATO rule overview: Adjusted wording of condition texts
     * 3855 SEC: Fixed possible command injection by privileged WATO users...
+    * 3805 WATO WebAPI: The configuration of cluster nodes is now officially supported...
     * 3060 FIX: Folder properties: Fixed exception when a user has no alias set...
     * 3062 FIX: Git integration: Fixed not adding files in WATO folders to git control
     * 3203 FIX: Distributed WATO: Fixed exception in remote host service discovery...
